Revert "fix: JVM flags"
This reverts commit b4039ccd477f920d8d5c9c434621e700a548cbfc.