@@ -28,24 +28,10 @@ ADD server.properties server.properties
 VOLUME [ "/var/server/world" ]
 VOLUME [ "/var/server/backups" ]
 ENV JVM_OPTS="-server \
-	-XX:+UseG1GC \
-	-XX:+ParallelRefProcEnabled \
-	-XX:MaxGCPauseMillis=200 \
 	-XX:+UnlockExperimentalVMOptions \
-	-XX:+DisableExplicitGC \
-	-XX:+AlwaysPreTouch \
-	-XX:G1NewSizePercent=30 \
-	-XX:G1MaxNewSizePercent=40 \
-	-XX:G1HeapRegionSize=8M \
-	-XX:G1ReservePercent=20 \
-	-XX:G1HeapWastePercent=5 \
-	-XX:G1MixedGCCountTarget=4 \
-	-XX:InitiatingHeapOccupancyPercent=15 \
-	-XX:G1MixedGCLiveThresholdPercent=90 \
-	-XX:G1RSetUpdatingPauseTimePercent=5 \
+	-XX:+UseZGC \
 	-XX:SurvivorRatio=32 \
-	-XX:+PerfDisableSharedMem \
-	-XX:MaxTenuringThreshold=1 \
+	-XX:MaxGCPauseMillis=50 \
 	-Dfml.readTimeout=90 \
 	-Dfml.queryResult=confirm"
 ENV MEMORY="12G"
